# stt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/stt/: __init__.py  app.py  cli.py
src/stt/service/: __init__.py  audio.py  audio_devices.py  audio_streaming.py  transcription.py
tests/: test_input_channels.py
