[project]
name = "stt"
version = "0.1.0"
description = "마이크 입력을 omnilingual-asr로 실시간 전사하는 예제"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "omnilingual-asr",
  "sounddevice",
  "soundfile",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pyright",
  "pytest",
]

[project.scripts]
stt = "stt.app:main"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
